[package]

name = "log"
version = "0.4.10" # remember to update html_root_url
authors = ["The Rust Project Developers"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/rust-lang/log"
documentation = "https://docs.rs/log"
description = """
A lightweight logging facade for Rust
"""
categories = ["development-tools::debugging"]
keywords = ["logging"]
exclude = ["rfcs/**/*", "/.travis.yml", "/appveyor.yml"]
build = "build.rs"
edition = "2018"

[package.metadata.docs.rs]
features = ["std", "serde", "kv_unstable_sval"]

[[test]]
name = "filters"
harness = false

[[test]]
name = "macros"
harness = true

[features]
max_level_off   = []
max_level_error = []
max_level_warn  = []
max_level_info  = []
max_level_debug = []
max_level_trace = []

release_max_level_off   = []
release_max_level_error = []
release_max_level_warn  = []
release_max_level_info  = []
release_max_level_debug = []
release_max_level_trace = []

std = ["sgx_tstd"]

# requires the latest stable
# this will have a tighter MSRV before stabilization
kv_unstable = []
kv_unstable_sval = ["kv_unstable", "sval/fmt"]

with-testing = [
    "inventory",
    "kv_unstable_sval",
    "serde",
    "serde_test",
    "std",
    "testing"
]

[dependencies]
cfg-if = "0.1.2"
#serde = { version = "1.0", optional = true, default-features = false }
sval = { version = "0.5.2", optional = true, default-features = false }

[dev-dependencies]
#serde_test = "1.0"
#sval = { version = "0.5.2", features = ["test"] }

[dependencies.inventory]
optional    = true
version     = "0.1.6"

[dependencies.serde]
branch              = "rsgx1.1.2"
default-features    = false
git                 = "https://github.com/sammyne/serde"
optional            = true

[dependencies.serde_test]
branch      = "rsgx1.1.2"
git         = "https://github.com/sammyne/serde"
optional    = true

[dependencies.sgx_tstd]
git         = "https://github.com/apache/teaclave-sgx-sdk"
optional    = true
rev         = "v1.1.2"

[dependencies.testing]
branch      = "rsgx1.1.2"
git         = "https://github.com/usccommunity/teaclave-testing"
optional    = true
