[package]
name = "sgx"
version = "0.1.0"
authors = ["sammyne <lixiangmin01@baidu.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
std = []
with-testing = ["std"]

[dependencies.inventory]
version     = "0.1.6"

[dependencies.log]
path        = "../../"
features    = ["std"]

[dependencies.sgx_tstd]
git         = "https://github.com/apache/teaclave-sgx-sdk"
rev         = "v1.1.2"

[dependencies.testing]
branch      = "rsgx1.1.2"
git         = "https://github.com/usccommunity/teaclave-testing"
